# odp-cli

./: .env.example  LICENSE  README.md  setup.cfg
odp/: api.py
odp/cli/: __init__.py  catalog.py  utils.py
