[metadata]
name = odp-cli
version = 2.0.0
description = Python client and command line interface for SAEON's Open Data Platform API.
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/SAEONData/odp-cli
author = Mark Jacobson
author_email = mark@saeon.ac.za
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = ~=3.7
install_requires =
    authlib
    click
    python-dotenv
    requests

[options.package_data]
odp = LICENSE, *.rst

[options.entry_points]
console_scripts =
    odp = odp.cli:odp
